Render flash message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <h1>Welcome to ABCD Cal Sync</h1>
+
+    <%= render_flash_message %>
     <%= yield %>
   </body>
 </html>
