--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,1 @@
-<p>You are logged in as <%= current_user.email %></p>
-<%= link_to 'Sign out', sign_out_path, data: { method: :delete } %>
+<p>You are logged in as <%= current_user.email %>. <span><%= link_to 'Sign out', sign_out_path, data: { method: :delete } %></span></p>
