--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,28 @@
 <p>You are logged in as <%= current_user.email %>. <span><%= link_to 'Sign out', sign_out_path, data: { method: :delete } %></span></p>
+<h4>Calendars:</h4>
+
+<% @calendars.includes(:events).each do |calendar|%>
+  <details>
+    <summary><%= calendar.summary %> <%= '(Primary)' if calendar.primary? %></summary>
+
+    <% if calendar.events.any? %>
+      <ul>
+        <% calendar.events.each do |event| %>
+          <li>
+            <p>
+              <span><%= event.summary.presence || 'Untitled' %></span>
+              
+              <% if event.start_at? %>
+                <em> | <%= l(event.start_at, format: :short) %></em>
+              <% end %>
+
+              <mark><%= event.status&.titleize %></mark>
+            </p>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>No event for today</p>
+    <% end %>
+  </details>
+<% end %>
